npm install postcss-cli

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -46,6 +46,8 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+      - name: install other useless shit
+        run: npm install postcss-cli
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
       - name: Build with Hugo
