--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -47,7 +47,7 @@ jobs:
         id: pages
         uses: actions/configure-pages@v5
       - name: install other useless shit
-        run: npm install postcss-cli
+        run: npm install postcss-cli @fullhuman/postcss-purgecss
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
       - name: Build with Hugo
