--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -27,6 +27,11 @@ hasChildren = true
 
   [[main]]
   parent = "Über uns"
+  name = "Mein Abonnement"
+  url = "https://billing.stripe.com/p/login/test_bIY6pJesg2dC9iMdQQ"
+
+  [[main]]
+  parent = "Über uns"
   name = "AGB"
   url = "terms-conditions/"
 
