--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -18,9 +18,9 @@ mainSections = ["blog"]
 # image gallery shortcode
 image_gallery = true
 # contact form action
-contact_form_action = "#" # contact form works with [https://airform.io/] or [https://formspree.io]
+contact_form_action = "https://formspree.io/f/xbjnpgko" # contact form works with [https://airform.io/] or [https://formspree.io]
 # google tag manager, see https://developers.google.com/tag-manager/
-google_tag_manager = "" # example: G-XXXXXXXXXX
+google_tag_manager = "GTM-5LSRQ7KB" # example: G-XXXXXXXXXX
 google_adsense = ""     # example: ca-pub-xxxxxxxxxxxxxxxx
 
 # custom script on header, example: custom_script= "<script>console.log(\"Hello World\")</script>"
