--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -5,7 +5,7 @@ languageCode = "de-de"
 contentDir = "content/german"
 weight = 1
 [de.params]
-footer_content = "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore dolore magna aliquyam eratnonumy onsetetur"
+footer_content = "Docu-chat.de - Ihr allwissender Assistent für Firmenwissen. Maximieren Sie Ihre Effizienz, minimieren Sie Ihre Suchzeit. Weil CEOs sich auf Entscheidungen konzentrieren sollten, nicht auf die Suche nach Informationen."
 # copyright
 copyright = "Copyright by DataFortress.cloud"
 
@@ -16,7 +16,7 @@ languageCode = "en-us"
 contentDir = "content/english"
 weight = 2
 [en.params]
-footer_content = "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore dolore magna aliquyam eratnonumy onsetetur"
+footer_content = "Docu-chat.de - your all-knowing assistant for company knowledge. Maximize your efficiency, minimize your search time. Because CEOs should focus on making decisions, not searching for information."
 # copyright
 copyright = "Copyright by DataFortress.cloud"
 
