--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -6,12 +6,12 @@ url = ""
 weight = 1
 
 [[main]]
-name = "Wie es funktioniert"
+name = "How it works"
 url = "how-it-works/"
 weight = 2
 
 [[main]]
-name = "Preise"
+name = "Prices"
 url = "pricing/"
 weight = 3
 
@@ -21,38 +21,38 @@ url = "contact/"
 weight = 4
 
 [[main]]
-name = "Über uns"
+name = "About"
 weight = 5
 hasChildren = true
 
   [[main]]
-  parent = "Über uns"
-  name = "Mein Abonnement"
+  parent = "About"
+  name = "My subscription"
   url = "https://billing.stripe.com/p/login/test_bIY6pJesg2dC9iMdQQ"
 
   [[main]]
-  parent = "Über uns"
-  name = "AGB"
+  parent = "About"
+  name = "terms & conditions"
   url = "terms-conditions/"
 
   [[main]]
-  parent = "Über uns"
-  name = "Privatsphären-Information"
+  parent = "About"
+  name = "privacy policy"
   url = "privacy-policy/"
 
   [[main]]
-  parent = "Über uns"
-  name = "Impressum"
+  parent = "About"
+  name = "Imprint"
   url = "impressum/"
 
 # Footer menu
 [[footer]]
-name = "Faq"
-url = "faq/"
+name = "Contact"
+url = "contact/"
 weight = 1
 
 [[footer]]
-name = "Terms & Conditions"
+name = "T&C"
 url = "terms-conditions/"
 weight = 2
 
