--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -26,6 +26,11 @@ weight = 5
 hasChildren = true
 
   [[main]]
+  parent = "Über uns"
+  name = "Tutorials"
+  url = "/blog"
+
+  [[main]]
   parent = "About"
   name = "My subscription"
   url = "https://billing.stripe.com/p/login/test_bIY6pJesg2dC9iMdQQ"
