german only mode

--- a/config/_default/menus.de.toml
+++ b/config/_default/menus.de.toml
@@ -50,6 +50,11 @@ hasChildren = true
   name = "Impressum"
   url = "impressum/"
 
+[[main]]
+name = "EN"
+url = "https://document-chat.com/"
+weight = 6
+
 # Footer menu
 [[footer]]
 name = "Kontakt"
