--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -124,7 +124,7 @@ mastodon = "" # Your verification code
 
 # cookies
 [cookies]
-enable = true
+enable = false
 expire_days = 2
 content = "Diese Website verwendet Cookies. Durch die weitere Nutzung dieser Website stimmen Sie deren Verwendung zu."
 button = "Ich stimme zu"
