--- a/config/_default/menus.de.toml
+++ b/config/_default/menus.de.toml
@@ -11,19 +11,30 @@ url = "how-it-works/"
 weight = 2
 
 [[main]]
+name = "Für Firmen"
+url = "companies/"
+weight = 3
+
+[[main]]
 name = "Preise"
 url = "pricing/"
-weight = 3
+weight = 4
 
 [[main]]
 name = "Kontakt"
 url = "contact/"
-weight = 4
+weight = 5
 
 [[main]]
 name = "Über uns"
-weight = 5
+weight = 6
 hasChildren = true
+
+  [[main]]
+  parent = "Über uns"
+  name = "Tutorials"
+  url = "/blog"
+
 
   [[main]]
   parent = "Über uns"
@@ -45,15 +56,11 @@ hasChildren = true
   name = "Impressum"
   url = "impressum/"
 
-[[main]]
-name = "Tutorials"
-url = "/blog"
-weight = 6
 
 [[main]]
 name = "EN"
 url = "https://document-chat.com/"
-weight = 7
+weight = 8
 
 # Footer menu
 [[footer]]
