--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -46,8 +46,9 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
-      - name: install other useless shit
-        run: npm install postcss-cli @fullhuman/postcss-purgecss
+      - name: Install other dependencies
+        run: |
+          npm install postcss@^8.4.20 postcss-cli@^10.1.0 @fullhuman/postcss-purgecss
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
       - name: Build with Hugo
