--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install other dependencies
         run: |
-          npm install postcss@^8.4.20 postcss-cli@^10.1.0 @fullhuman/postcss-purgecss
+          npm install
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
       - name: Build with Hugo
