--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install other dependencies
         run: |
-          npm install
+          npm install --prefix themes/copper-hugo
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
       - name: Build with Hugo
