--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Install other dependencies
         run: |
           npm install --prefix themes/copper-hugo
-          npm install -g postcss
+          npm install -g postcss-cli@^10.1.0 @fullhuman/postcss-purgecss@^5.0.0 postcss@^8.4.20
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
       - name: Build with Hugo
